fixed anchor jumps

--- a/scss/styles/_jumbotron.scss
+++ b/scss/styles/_jumbotron.scss
@@ -31,7 +31,14 @@ display: block;
 position: absolute; 
 bottom: 0;
 left: 0;
-height: 100%;
+height: 85%;
 width: 100%;
 background-color: rgba(0, 0, 0, 0.479);
 }
+#angebot:before {
+  content:"";
+  display:block;
+  height:90px; /* fixed header height*/
+  margin:-90px 0 0; /* negative fixed header height */
+ background-color: white;
+  }
